gen/antlr/antlr/MyParser.java
// Generated from C:/Users/ASUS/Desktop/compiler/src/antlr/antlr/MyParser.g4 by ANTLR 4.13.2
package antlr.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class MyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, CLICK=2, FROM=3, STYLE=4, LET=5, VAR=6, CONST=7, OF=8, ARRAY=9, 
		FUNCTION=10, IMPLEMENTS=11, IF=12, ELSE=13, RETURN=14, AS=15, AT=16, ROUTER=17, 
		NAVIGATE=18, COMPONENT=19, SELECTOR=20, STANDALONE=21, IMPORTS=22, TEMPLATE=23, 
		EXPORT=24, EXPORTS=25, INTERFACE=26, NGMODULE=27, INJECTABLE=28, CLASS=29, 
		TRY=30, CATCH=31, CONSOLE=32, ERROR=33, LOG=34, ANY=35, NUMBER=36, STRING_EX=37, 
		VOID=38, NULL=39, TOSTRING=40, NgFor=41, NgIf=42, BIT_OR=43, AND=44, OR=45, 
		NOT=46, EQUAL_EQUAL=47, EQUALTHIRD=48, NOT_EQUAL=49, NOT_EQUAL_EQUAL=50, 
		LT_EQUAL=51, GT_EQUAL=52, SQUARE_OPEN_BRACKET=53, SQUARE_CLOSE_BRACKET=54, 
		OPEN_BRACKET=55, CLOSE_BRACKET=56, CURLY_OPEN_BRACKET=57, CURLY_CLOSE_BRACKET=58, 
		DOUBLE_CURLY_OPEN_BRACKET=59, DOUBLE_CURLY_CLOSE_BRACKET=60, ARROW=61, 
		LT=62, GT=63, SLASH=64, DQUOT=65, QUOT=66, STRING=67, NUMBER_VAL=68, BOOLEAN=69, 
		AccessModifiers=70, BEHAVIORSUBJECT=71, SEMI_COLON=72, COMMA=73, COLON=74, 
		DOT=75, QUESTION_MARK=76, HASH_TAG=77, EQUAL=78, PLUS=79, MIN=80, MULT=81, 
		S_DOlOR=82, WS=83, NEWLINE=84, MultiLineComment=85, SingleLineComment=86, 
		IDENTIFIER=87, WS1=88, EQUAL1=89, DQUOT1=90, LET1=91, SEMI_COLON5=92, 
		OF1=93, ID1=94, DQUOT2=95, WS2=96, NUMBER_VAL1=97, EQUAL2=98, NULL1=99, 
		DQUOT3=100, BIT_OR1=101, AND1=102, OR1=103, NOT1=104, EQUAL_EQUAL1=105, 
		EQUAL_EQUAL2=106, NOT_EQUAL1=107, NOT_EQUAL2=108, LT_EQUAL1=109, GT_EQUAL1=110, 
		PLUS1=111, MIN1=112, MULT1=113, COMMA1=114, COLON1=115, DOT1=116, QUESTION_MARK1=117, 
		ARROW1=118, LT1=119, GT1=120, SQUARE_OPEN_BRACKET1=121, SQUARE_CLOSE_BRACKET1=122, 
		OPEN_BRACKET1=123, CLOSE_BRACKET1=124, CURLY_OPEN_BRACKET1=125, CURLY_CLOSE_BRACKET1=126, 
		ID2=127, DQUOT4=128, WS3=129, CLOSE_BRACKET2=130, NUMBER_VAL2=131, EQUAL3=132, 
		NOT2=133, PLUS2=134, MIN2=135, MULT2=136, DOT3=137, DQUOT5=138, ID3=139, 
		OPEN_BRACKET2=140, DQUOT6=141;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_importStatment = 2, RULE_module = 3, 
		RULE_componentDeclaration = 4, RULE_componentBody = 5, RULE_componentEle = 6, 
		RULE_style = 7, RULE_templateProperty = 8, RULE_selectorProperty = 9, 
		RULE_standaloneProperty = 10, RULE_propertyFun = 11, RULE_propertyStat = 12, 
		RULE_importsProperty = 13, RULE_exportsProperty = 14, RULE_bootstrapProperty = 15, 
		RULE_classType = 16, RULE_classRelation = 17, RULE_classStatment = 18, 
		RULE_types = 19, RULE_brackets = 20, RULE_stateManagement = 21, RULE_expressionInBody = 22, 
		RULE_body = 23, RULE_print_error = 24, RULE_print_stat = 25, RULE_functionCall = 26, 
		RULE_argumentList = 27, RULE_conditions = 28, RULE_returnType = 29, RULE_returnStat = 30, 
		RULE_objectLiteral = 31, RULE_objectProperty = 32, RULE_propertyAccess = 33, 
		RULE_functionDeclarationStat = 34, RULE_normalfunctionDecl = 35, RULE_functionDeclaration = 36, 
		RULE_parametersType = 37, RULE_parametersContent = 38, RULE_parameters = 39, 
		RULE_values = 40, RULE_operations = 41, RULE_subDotAssignment = 42, RULE_assignment = 43, 
		RULE_templateExpression = 44, RULE_eventBinding = 45, RULE_htmlDeclare = 46, 
		RULE_normalHtmlTag = 47, RULE_selfClosingTag = 48, RULE_openTag = 49, 
		RULE_closeTag = 50, RULE_simpleArray = 51, RULE_map = 52, RULE_type = 53, 
		RULE_primitiveType = 54, RULE_arrayStringType = 55, RULE_arrayNumberType = 56, 
		RULE_marks = 57, RULE_arrayDeclaration = 58, RULE_conditionStat = 59, 
		RULE_tryStat = 60, RULE_catchStat = 61, RULE_operationExpr = 62, RULE_questionCondition = 63, 
		RULE_navigate = 64, RULE_functionExp = 65, RULE_content = 66, RULE_expression = 67, 
		RULE_directivesStatment = 68, RULE_ngForValue = 69, RULE_ngForExpression = 70, 
		RULE_ngIfValue = 71, RULE_conditionExpression = 72, RULE_equalOperation = 73, 
		RULE_logicalTerm = 74, RULE_ifStat = 75, RULE_ifElseStat = 76, RULE_variable_type = 77, 
		RULE_unionType = 78, RULE_newObjectFromClass = 79, RULE_toStringNode = 80, 
		RULE_variableDeclarationStat = 81, RULE_variableDeclaration = 82, RULE_arrowFunction = 83;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "importStatment", "module", "componentDeclaration", 
			"componentBody", "componentEle", "style", "templateProperty", "selectorProperty", 
			"standaloneProperty", "propertyFun", "propertyStat", "importsProperty", 
			"exportsProperty", "bootstrapProperty", "classType", "classRelation", 
			"classStatment", "types", "brackets", "stateManagement", "expressionInBody", 
			"body", "print_error", "print_stat", "functionCall", "argumentList", 
			"conditions", "returnType", "returnStat", "objectLiteral", "objectProperty", 
			"propertyAccess", "functionDeclarationStat", "normalfunctionDecl", "functionDeclaration", 
			"parametersType", "parametersContent", "parameters", "values", "operations", 
			"subDotAssignment", "assignment", "templateExpression", "eventBinding", 
			"htmlDeclare", "normalHtmlTag", "selfClosingTag", "openTag", "closeTag", 
			"simpleArray", "map", "type", "primitiveType", "arrayStringType", "arrayNumberType", 
			"marks", "arrayDeclaration", "conditionStat", "tryStat", "catchStat", 
			"operationExpr", "questionCondition", "navigate", "functionExp", "content", 
			"expression", "directivesStatment", "ngForValue", "ngForExpression", 
			"ngIfValue", "conditionExpression", "equalOperation", "logicalTerm", 
			"ifStat", "ifElseStat", "variable_type", "unionType", "newObjectFromClass", 
			"toStringNode", "variableDeclarationStat", "variableDeclaration", "arrowFunction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'click'", "'from'", "'styles'", null, "'var'", "'const'", 
			null, "'Array'", "'function'", "'implements'", "'if'", "'else'", "'return'", 
			"'as'", "'@'", "'router'", "'navigate'", "'@Component'", "'selector'", 
			"'standalone'", "'imports'", "'template'", "'export'", "'exports'", "'interface'", 
			"'@NgModule'", "'@Injectable'", "'class'", "'try'", "'catch'", "'console'", 
			"'error'", "'log'", "'any'", "'number'", "'string'", "'void'", null, 
			"'toISOString'", "'*ngFor'", "'*ngIf'", null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'{{'", 
			"'}}'", null, null, null, "'/'", null, "'`'", null, null, null, "'private'", 
			"'BehaviorSubject'", null, null, null, null, null, "'#'", null, null, 
			null, null, "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "CLICK", "FROM", "STYLE", "LET", "VAR", "CONST", "OF", 
			"ARRAY", "FUNCTION", "IMPLEMENTS", "IF", "ELSE", "RETURN", "AS", "AT", 
			"ROUTER", "NAVIGATE", "COMPONENT", "SELECTOR", "STANDALONE", "IMPORTS", 
			"TEMPLATE", "EXPORT", "EXPORTS", "INTERFACE", "NGMODULE", "INJECTABLE", 
			"CLASS", "TRY", "CATCH", "CONSOLE", "ERROR", "LOG", "ANY", "NUMBER", 
			"STRING_EX", "VOID", "NULL", "TOSTRING", "NgFor", "NgIf", "BIT_OR", "AND", 
			"OR", "NOT", "EQUAL_EQUAL", "EQUALTHIRD", "NOT_EQUAL", "NOT_EQUAL_EQUAL", 
			"LT_EQUAL", "GT_EQUAL", "SQUARE_OPEN_BRACKET", "SQUARE_CLOSE_BRACKET", 
			"OPEN_BRACKET", "CLOSE_BRACKET", "CURLY_OPEN_BRACKET", "CURLY_CLOSE_BRACKET", 
			"DOUBLE_CURLY_OPEN_BRACKET", "DOUBLE_CURLY_CLOSE_BRACKET", "ARROW", "LT", 
			"GT", "SLASH", "DQUOT", "QUOT", "STRING", "NUMBER_VAL", "BOOLEAN", "AccessModifiers", 
			"BEHAVIORSUBJECT", "SEMI_COLON", "COMMA", "COLON", "DOT", "QUESTION_MARK", 
			"HASH_TAG", "EQUAL", "PLUS", "MIN", "MULT", "S_DOlOR", "WS", "NEWLINE", 
			"MultiLineComment", "SingleLineComment", "IDENTIFIER", "WS1", "EQUAL1", 
			"DQUOT1", "LET1", "SEMI_COLON5", "OF1", "ID1", "DQUOT2", "WS2", "NUMBER_VAL1", 
			"EQUAL2", "NULL1", "DQUOT3", "BIT_OR1", "AND1", "OR1", "NOT1", "EQUAL_EQUAL1", 
			"EQUAL_EQUAL2", "NOT_EQUAL1", "NOT_EQUAL2", "LT_EQUAL1", "GT_EQUAL1", 
			"PLUS1", "MIN1", "MULT1", "COMMA1", "COLON1", "DOT1", "QUESTION_MARK1", 
			"ARROW1", "LT1", "GT1", "SQUARE_OPEN_BRACKET1", "SQUARE_CLOSE_BRACKET1", 
			"OPEN_BRACKET1", "CLOSE_BRACKET1", "CURLY_OPEN_BRACKET1", "CURLY_CLOSE_BRACKET1", 
			"ID2", "DQUOT4", "WS3", "CLOSE_BRACKET2", "NUMBER_VAL2", "EQUAL3", "NOT2", 
			"PLUS2", "MIN2", "MULT2", "DOT3", "DQUOT5", "ID3", "OPEN_BRACKET2", "DQUOT6"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 419954690L) != 0) || _la==IDENTIFIER) {
				{
				{
				setState(168);
				statement();
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ImportStatmentContext importStatment() {
			return getRuleContext(ImportStatmentContext.class,0);
		}
		public ComponentDeclarationContext componentDeclaration() {
			return getRuleContext(ComponentDeclarationContext.class,0);
		}
		public ClassStatmentContext classStatment() {
			return getRuleContext(ClassStatmentContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(178);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				enterOuterAlt(_localctx, 1);
				{
				setState(174);
				importStatment();
				}
				break;
			case COMPONENT:
			case NGMODULE:
			case INJECTABLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(175);
				componentDeclaration();
				}
				break;
			case EXPORT:
				enterOuterAlt(_localctx, 3);
				{
				setState(176);
				classStatment();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 4);
				{
				setState(177);
				functionCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatmentContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(MyParser.IMPORT, 0); }
		public TerminalNode CURLY_OPEN_BRACKET() { return getToken(MyParser.CURLY_OPEN_BRACKET, 0); }
		public TerminalNode CURLY_CLOSE_BRACKET() { return getToken(MyParser.CURLY_CLOSE_BRACKET, 0); }
		public TerminalNode FROM() { return getToken(MyParser.FROM, 0); }
		public TerminalNode STRING() { return getToken(MyParser.STRING, 0); }
		public TerminalNode SEMI_COLON() { return getToken(MyParser.SEMI_COLON, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(MyParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(MyParser.IDENTIFIER, i);
		}
		public TerminalNode BEHAVIORSUBJECT() { return getToken(MyParser.BEHAVIORSUBJECT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MyParser.COMMA, i);
		}
		public ImportStatmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).enterImportStatment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MyParserListener ) ((MyParserListener)listener).exitImportStatment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MyParserVisitor ) return ((MyParserVisitor<? extends T>)visitor).visitImportStatment(this);
			else return visitor.visitChildren(this);
		}
	}
